--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RSS агрегатор</title>
 </head>
 <body>
     <main class="flex-grow-1">
         <section class="container-fluid">
             <div class="mx-auto">
                 <h1>RSS агрегатор</h1>
-                <p>Добвьте RSS и читайте любимые новости в одном месте</p>
-                <form action class="rss-form text-body">
+                <p>Добавьте RSS и читайте любимые новости в одном месте</p>
+                <form action="#" class="rss-form text-body">
                     <div class="row">
-                        <div class="coll">
+                        <div class="col">
                             <div class="form-floating">
-                                <input id="url-input" type="text" placeholder="Ссылка RSS" autocomplete="off">
+                                <input id="url-input" type="text" name="url" placeholder="Ссылка RSS" autocomplete="off" class="form-control">
                                 <label for="url-input">Ссылка RSS</label>
+                                <div class="feedback invalid-feedback"></div>
                             </div>
                         </div>
-                        <div class="coll-auto">
+                        <div class="col-auto">
                             <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
                         </div>
                     </div>
