Step 4. Add axios, parserRSS, feeds[], posts[]

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                         </div>
                     </div>
                 </form>
+                <div id="feeds"></div>
+                <div id="posts"></div>
             </div>
         </section>
     </main>
