--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
                         </div>
                     </div>
                 </form>
-                <div id="feeds"></div>
-                <div id="posts"></div>
+                <section>
+                    <div id="feeds"></div>
+                    <div id="posts"></div>
+                </section>
             </div>
         </section>
     </main>
