--- a/index.html
+++ b/index.html
@@ -25,9 +25,27 @@
                         </div>
                     </div>
                 </form>
-                <section>
+                <section class="container-feeds-and-posts">
                     <div id="feeds"></div>
                     <div id="posts"></div>
+                </section>
+                <section class="container-modal">
+                    <div class="modal fade" id="postModal" tabindex="-1" aria-labelledby="postModalModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="modalTitle">Заголовок поста</h5>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body" id="modalBody">
+                              Описание поста
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-primary">Закрыть</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                 </section>
             </div>
         </section>
