Step 6.1. Fix modal window

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                               Описание поста
                             </div>
                             <div class="modal-footer">
-                              <button type="button" class="btn btn-primary">Закрыть</button>
+                              <button type="button" class="btn btn-sm btn-primary preview-btn" data-bs-dismiss="modal">Закрыть</button>
                             </div>
                           </div>
                         </div>
