Step 7. Fix lint. Add eslint.config.js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div id="posts"></div>
                 </section>
                 <section class="container-modal">
-                    <div class="modal fade" id="postModal" tabindex="-1" aria-labelledby="postModalModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="postModal" tabindex="-1" aria-labelledby="postModalModalLabel" aria-hidden="false">
                         <div class="modal-dialog">
                           <div class="modal-content">
                             <div class="modal-header">
