--- a/index.html
+++ b/index.html
@@ -11,54 +11,57 @@
             <div class="mx-auto">
                 <h1 id="title">RSS агрегатор</h1>
                 <p id="description">Добавьте RSS и читайте любимые новости в одном месте</p>
-                
                 <form class="rss-form text-body">
                     <div class="row">
                         <div class="col">
                             <div class="form-floating">
                                 <input 
-                                    id="url-input" 
+                                    id="url-input"
                                     type="url"
-                                    name="url" 
+                                    name="url"
                                     aria-label="url"
-                                    placeholder="Ссылка RSS" 
-                                    autocomplete="off" 
+                                    placeholder="Ссылка RSS"
+                                    autocomplete="off"
                                     class="form-control"
-                                    required
-                                >
+                                    required>
                                 <label id="input-label" for="url-input">Ссылка RSS</label>
                                 <div class="feedback invalid-feedback"></div>
                             </div>
                         </div>
                         <div class="col-auto">
                             <button 
-                                id="submit-button" 
-                                type="submit" 
+                                id="submit-button"
+                                type="submit"
                                 aria-label="add"
-                                class="h-100 btn btn-lg btn-primary px-sm-5"
-                            >
+                                class="h-100 btn btn-lg btn-primary px-sm-5">
                                 Добавить
                             </button>
                         </div>
                     </div>
                 </form>
-
-                <section class="container-feeds-and-posts">
-                    <div id="feeds"></div>
-                    <div id="posts"></div>
+                <section class="container-feeds-and-posts container-fluid mt-4">
+                    <div class="row">
+                      <div class="col-md-8 order-md-1">
+                        <div id="posts" class="pe-3"></div>
+                      </div>
+                      <div class="col-md-4 order-md-2">
+                        <div id="feeds" class="ps-3">
+                          <h3 class="mb-3"></h3>
+                        </div>
+                      </div>
+                    </div>
                 </section>
-
                 <div class="modal fade" id="postModal" tabindex="-1" aria-labelledby="postModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="modalTitle">Заголовок поста</h5>
                                 <button 
-                                    type="button" 
-                                    class="btn-close" 
-                                    data-bs-dismiss="modal" 
-                                    aria-label="Close"
-                                ></button>
+                                    type="button"
+                                    class="btn-close"
+                                    data-bs-dismiss="modal"
+                                    aria-label="Close">
+                                </button>
                             </div>
                             <div class="modal-body" id="modalBody">
                                 Описание поста
@@ -67,8 +70,7 @@
                                 <button 
                                     type="button" 
                                     class="btn btn-sm btn-primary preview-btn" 
-                                    data-bs-dismiss="modal"
-                                >
+                                    data-bs-dismiss="modal">
                                     Закрыть
                                 </button>
                             </div>
